2009-05-14  Piotr Fusik  <fox@scene.pl>
* win32/Makefile: shortened and fixed "clean" target; shortened "dist" target;
  backup file removal within ASCIIDOC_POSTPROCESS

* acpu.c: optimized ROR

* asap.c, asap.h, asap2wav.c, java/ASAP.ppjava, java/ASAP2WAV.java,
  java/ASAPMIDlet.java, csharp/ASAP.ppcs, csharp/asap2wav.cs:
  ASAP_GetWavHeader()

* java/ASAP2WAV.java, csharp/asap2wav.cs: with "--raw" option the default
  output filename extension is "raw"

* java/ASAP.ppjava, java/ASAPMIDlet.java: display TIME tags

* asap.c, asap.h, java/ASAP.ppjava, java/ASAPMIDlet.java, csharp/ASAP.ppcs:
  ASAP_GetPosition()

* csharp/ASAP.ppcs, csharp/asap2wav.cs: made ASAP_SampleFormat
  an enum and not int

* java/ASAPMIDlet.java, asap.c, java/ASAP.ppjava: started implementation
  of a "small streams" algorithm


** 1.2.1 released on 2009-05-08

2009-05-08  Piotr Fusik  <fox@scene.pl>
* asap2wav.c, java/ASAP2WAV.java, csharp/asap2wav.cs:
  small refactoring of no_input_files and print_version

* asap2wav.1, Makefile.in, win32/USAGE, win32/Makefile, java/USAGE:
  removed the man page

* README: more information about input file formats

* INSTALL, README, Makefile.in, win32/Makefile: INSTALL converted
  to AsciiDoc format, README.html distributed with source code

* configure.ac, INSTALL: MOC upgraded to 2.4.4


2009-05-01  Piotr Fusik  <fox@scene.pl>
* README, NEWS, CREDITS, gsplayer/gspasap.txt, java/asap_applet.txt,
  java/asap_midlet.txt, java/USAGE, win32/USAGE, win32/Makefile,
  win32/apollo/README, win32/dshow/README, win32/foobar2000/README,
  win32/wasap/README, win32/winamp/README, xbmc/README:
  converted documentation to AsciiDoc format

* INSTALL: upgraded Visual C++ and Perl

* asap.h, configure.ac, csharp/ASAP.ppcs, java/ASAP.ppjava,
  java/asap_midlet.MF: 1.2.1


2009-04-03  Piotr Fusik  <fox@scene.pl>
* asapscan.c, asap_internal.h, acpu.c, chksap.pl:
  "-u" lists unofficial 6502 opcodes used

* chksap.pl: "-st" lists files without TIME tags
